# data_science_snippets

./: .gitignore  README.md  setup.cfg  try_models_classification.py  try_models_regression.py
auto_ml/: cv_model_comparison.py
data_exploration/: categorical_vs_numeric.py  detect_outliers.py  feature_selection.py  reduce_dataset.py
data_science_snippets/auto_ml/: cv_model_comparison.py
data_science_snippets/data_exploration/: categorical_vs_numeric.py  detect_outliers.py  feature_selection.py  reduce_dataset.py
data_science_snippets/model_selection/: __init__.py  cv_model_comparison.py  gscv.py  splitters.py
data_science_snippets/preprocessing/: __init__.py  grouped_scaler.py
model_selection/: cv_model_comparison.py
tests/data_exploration/: test_categorical_vs_numeric.py
tests/model_selection/: test_splitters.py
tests/preprocessing/: test_grouped_scaler.py
