[metadata]
name = data_science_snippets
version = attr: data_science_snippets.__version__
author = Ahn729
url = https://github.com/Ahn729/data_science_snippets
description = Collection of snippets I find useful for data analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/Ahn729/data_science_snippets/issues

[options]
include_package_data = true
python_requires = >= 3.8
packages = find:
install_requires =
    sklearn
    pandas
    numpy
    statsmodels
    scipy
    matplotlib
    seaborn
    xgboost
    sklearn-contrib-py-earth
    tqdm
